# podrostoc

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/: TODO
.github/workflows/: azure-webapps-python.yml
docker/: Dockerfile
podrostoc/: client.py
podrostoc/data_structures/: annotation.py  cell_with_meta.py  document_content.py  document_metadata.py  line_metadata.py  line_with_meta.py  paragraph_metadata.py  parsed_document.py  table.py  table_metadata.py  tree_node.py
src/data_structures/: annotation.py  table.py  tree_node.py
src/exceptions/: dedoc_exception.py
tests/: run_test.sh  test_style.py  utils.py  wait_connection.py
tests/api/: test_api.py
tests/apt/: test_api.py
tests/data/: books_semicolons.csv  response.json
tests/units/: test_data_structure.py
