[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "podrostoc"
version = "0.0.1"
authors = [
    "Ilya Kozlov <ilya.kozlov2@yandex.ru>"
]
maintainers = [
    "Ilya Kozlov <ilya.kozlov2@yandex.ru>"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]

description = "Dedoct client."
keywords = ["document analysis", "logical structure extraction", "OCR", "deep learning", "computer vision"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
requests = "^2.25.0"


[tool.poetry.group.test.dependencies]
cowsay = "^4.0.0"
entrypoints = "0.3"
flake8 = "3.7.9"
flake8-annotations = "1.0.0"
flake8-tuple = "0.4.1"
mccabe = "0.6.1"
pycodestyle = "2.5.0"
pyflakes = "2.1.1"
six = "1.16.0"
flake8-builtins = "1.5.3"
flake8-black = "0.3.6"

